# mahjong

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.h  map.c  mix_cache.c  mix_cache.h  path.c  path.h  point.c  tex_cache.c  tex_cache.h  util.h  window.c  window.h
assets/map/: map1.txt  map2.txt  map3.txt  map4.txt
cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: game.c  map.c  tex_cache.c  tile.h  util.c  util.h  window.c  window.h
